kubernetes/kubernetes-dashboard/kubernetes-dashboard-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: kubernetes-dashboard
  name: kubernetes-dashboard
