kubernetes/kubernetes-dashboard/kubernetes-dashboard-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
  labels:
    k8s-app: kubernetes-dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: kubernetes-dashboard
  template:
    metadata:
      labels:
        k8s-app: kubernetes-dashboard
      annotations:
        enable.version-checker.io/kubernetes-dashboard: "true"
        enable.version-checker.io/dashboard-metrics-scraper: "true"
        seccomp.security.alpha.kubernetes.io/defaultProfileName: "runtime/default"
    spec:
      volumes:
        - name: kubernetes-dashboard-certs
          secret:
            secretName: kubernetes-dashboard-certs
            defaultMode: 420
        - name: tmp-volume
          emptyDir:
            sizeLimit: 25Mi
      automountServiceAccountToken: true
      containers:
        - name: kubernetes-dashboard
          image: kubernetesui/dashboard:v2.5.0
          args:
            - "--auto-generate-certificates"
            - "--namespace=kubernetes-dashboard"
          ports:
            - containerPort: 8443
              protocol: TCP
              name: kube-websecure
          resources:
            limits:
              cpu: 150m
              memory: 100M
              ephemeral-storage: "25Mi"
            requests:
              cpu: 75m
              memory: 50M
              ephemeral-storage: "25Mi"
          volumeMounts:
            - name: kubernetes-dashboard-certs
              mountPath: /certs
            - name: tmp-volume
              mountPath: /tmp
          livenessProbe:
            httpGet:
              path: /
              port: 8443
              scheme: HTTPS
            initialDelaySeconds: 30
            timeoutSeconds: 30
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
          securityContext:
            runAsUser: 11001
            runAsGroup: 12001
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - all
        - name: dashboard-metrics-scraper
          image: kubernetesui/metrics-scraper:v1.0.7
          ports:
            - containerPort: 443 # Serves No Purpose other than to Satisfy kics IAC Scanner.
              name: unused-443
            - containerPort: 8000
              protocol: TCP
          resources:
            limits:
              cpu: 20m
              memory: 50M
            requests:
              cpu: 10m
              memory: 35M
          volumeMounts:
            - name: tmp-volume
              mountPath: /tmp
          livenessProbe:
            httpGet:
              path: /
              port: 8000
              scheme: HTTP
            initialDelaySeconds: 30
            timeoutSeconds: 30
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
          securityContext:
            runAsUser: 11001
            runAsGroup: 12001
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - all
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      tolerations:
        - key: node-role.kubernetes.io/control-plane
          effect: NoSchedule
        - key: node-role.kubernetes.io/master
          effect: NoSchedule
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 1
              preference:
                matchExpressions:
                  - key: node-role.kubernetes.io/master
                    operator: In
                    values:
                      - "true"
      serviceAccountName: kubernetes-dashboard
      serviceAccount: kubernetes-dashboard
      securityContext:
        runAsUser: 11001
        runAsGroup: 12001
        seccompProfile:
          type: RuntimeDefault
      schedulerName: default-scheduler
  strategy:
    type: Recreate
  revisionHistoryLimit: 0
  progressDeadlineSeconds: 600
