kubernetes/kubernetes-dashboard/kubernetes-dashboard-traefik.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  labels:
    k8s-app: kubernetes-dashboard
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: "Host(`dashboard.arthurvardevanyan.com`)"
      kind: Rule
      services:
        - name: kubernetes-dashboard
          port: 443
      middlewares:
        - name: https-redirect
  tls: {}
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: https-redirect
  namespace: kubernetes-dashboard
spec:
  redirectScheme:
    scheme: https
    permanent: true
